# ai-dev-kit

./: .gitignore  README.md  install.sh
.github/workflows/: ci.yml
.test/: README.md  SKILL.md  install_skill_test.sh  pyproject.toml  trace-integration-plan.md
.test/baselines/databricks-python-sdk/: baseline.yaml
.test/baselines/spark-declarative-pipelines/: baseline.yaml
.test/references/: python-api.md  trace-eval.md  workflows.md
.test/scripts/: add.py  baseline.py  init_skill.py  list_traces.py  regression.py  review.py  routing_eval.py  scorers.py  scorers_update.py  sync.py  trace_eval.py
.test/src/skill_test/: config.py
.test/src/skill_test/cli/: __init__.py  commands.py
.test/src/skill_test/grp/: executor.py  pipeline.py
.test/src/skill_test/runners/: evaluate.py
.test/src/skill_test/scorers/: trace.py  universal.py
.test/src/skill_test/trace/: mlflow_integration.py  models.py  parser.py  source.py
.test/tests/integration/: __init__.py  conftest.py  test_review_workflow.py  test_scripts.py  test_trace_eval.py  test_trace_source.py
databricks-mcp-core/: README.md  requirements.txt
databricks-mcp-server/: requirements.txt
databricks-mcp-server/databricks_mcp_server/: server.py
databricks-skills/: README.md  install_skills.sh
databricks-skills/asset-bundles/: SKILL.md
databricks-skills/databricks-app-apx/: SKILL.md
databricks-skills/databricks-app-python/: SKILL.md
databricks-skills/databricks-genie/: SKILL.md  spaces.md
databricks-skills/lakebase-provisioned/: SKILL.md
databricks-skills/zerobus-ingest/: SKILL.md
(+18 files in other folders)
